--- a/static/css/home/home.css
+++ b/static/css/home/home.css
@@ -116,14 +116,14 @@ a {
     color: green;
 }
 
-.footer {
+footer {
     background: #111;
     color: #fff;
     text-align: center;
     padding: 2rem 0;
 }
 
-.footer .social a {
+footer .social a {
     margin: 0 0.5rem;
     color: #007bff;
 }
