Change a href to lead to my GitHub profile

--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -103,7 +103,7 @@
         <div class="container">
             <p>&copy; 2025 Svetoslav Baykov</p>
             <div class="social">
-                <a href="https://github.com/yourname" target="_blank">GitHub</a>
+                <a href="https://github.com/ChesterLen" target="_blank">GitHub</a>
                 <a href="https://linkedin.com/in/yourname" target="_blank">LinkedIn</a>
             </div>
         </div>
