Create project quick overview page and implement image enlarge and reset with JavaScript

--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -69,6 +69,9 @@
                             product browsing, and a secure checkout process powered by Stripe. Built from scratch, the project showcases both
                             technical skill and attention to user experience, with a focus on elegance and performance.
                         </p>
+                        <div class="images">
+                            <a href="http://127.0.0.1:5500/templates/project1/quick_overview.html"><img src="../static/images/Untitled.png" alt="project image"></a>
+                        </div>
                     </div>
                     <div class="project">
                         <h3>Online T-Shirt Store</h3>
