--- a/static/css/home/home.css
+++ b/static/css/home/home.css
@@ -98,7 +98,9 @@ a {
 }
 
 .project {
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .project h3 {
@@ -109,9 +111,14 @@ a {
     font-size: 1rem;
     line-height: 1.6;
     color: #444;
-    margin: 0.5em 0 1.5em 0;
+    text-align: center;
+    margin: 0.5em 0 1em 0;
     max-width: 700px;
-    text-align: left;
+}
+
+.project .images img {
+    width: 500px;
+    height: 250px;
 }
 
 .card {
