--- a/static/css/projects/project2.css
+++ b/static/css/projects/project2.css
@@ -34,6 +34,7 @@ a {
 
 .container h1 {
     margin-left: auto;
+    margin-right: 2.8em;
 }
 
 .container a {
@@ -69,10 +70,13 @@ a {
 }
 
 footer .footer-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background: #111;
     color: #fff;
-    text-align: center;
     padding: 2rem 0;
+    width: 100%;
 }
 
 footer .social a {
