--- a/templates/project2/quick_overview.html
+++ b/templates/project2/quick_overview.html
@@ -5,22 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
-    <link rel="stylesheet" type="text/css" href="../../static/css/projects/project1.css">
+    <link rel="stylesheet" type="text/css" href="../../static/css/projects/project2.css">
 </head>
 
 <body>
     <nav class="navbar">
         <div class="container">
             <a href="http://127.0.0.1:5500/templates/home_page.html">Back</a>
-            <h1 class="logo">Gem & Jewelry Online Shop</h1>
+            <h1 class="logo">The T-shirt Store</h1>
         </div>
     </nav>
 
     <main class="project-images">
         <div class="images">
             <img src="../../static/images/project2/Untitled11.png" alt="project image">
-            <img src="../../static/images/Untitled2.png" alt="project image">
-            <img src="../../static/images/Untitled3.png" alt="project image">
+            <img src="../../static/images/project2/Untitled22.png" alt="project image">
+            <img src="../../static/images/project2/Untitled33.png" alt="project image">
             <div class="empty-div"></div>
         </div>
     </main>
