--- a/templates/project2/quick_overview.html
+++ b/templates/project2/quick_overview.html
@@ -26,7 +26,7 @@
     </main>
 
     <footer>
-        <div class="container">
+        <div class="footer-container">
             <p>&copy; 2025 Svetoslav Baykov</p>
             <div class="social">
                 <a href="https://github.com/ChesterLen" target="_blank">GitHub</a>
