--- a/templates/project1/quick_overview.html
+++ b/templates/project1/quick_overview.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar">
         <div class="container">
-            <a href="http://127.0.0.1:5500/templates/home_page.html">Back</a>
+            <a href="home_page.html">Back</a>
             <h1 class="logo">Gem & Jewelry Online Shop</h1>
         </div>
     </nav>
