Fix href for back button

--- a/templates/project2/quick_overview.html
+++ b/templates/project2/quick_overview.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar">
         <div class="container">
-            <a href="home_page.html">Back</a>
+            <a href="../../home_page.html">Back</a>
             <h1 class="logo">The T-shirt Store</h1>
         </div>
     </nav>
