--- a/templates/project1/quick_overview.html
+++ b/templates/project1/quick_overview.html
@@ -21,6 +21,7 @@
             <img src="../../static/images/project1/Untitled_1.png" alt="project image">
             <img src="../../static/images/project1/Untitled_2.png" alt="project image">
             <img src="../../static/images/project1/Untitled_3.png" alt="project image">
+            <img src="../../static/images/project1/Untitled_4.png" alt="project image">
             <div class="empty-div"></div>
         </div>
     </main>
