--- a/templates/project1/quick_overview.html
+++ b/templates/project1/quick_overview.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="static/images/portfolio_favicon.png">
+    <link rel="icon" type="image/x-icon" href="../../static/images/portfolio_favicon.png">
     <title>My Portfolio</title>
     <link rel="stylesheet" type="text/css" href="../../static/css/projects/project1.css">
 </head>
